config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motoren-frontpage-ingress
  namespace: apps
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app.ostepopp.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: motoren-frontpage
            port:
              number: 80
